--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -12,21 +12,24 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: 파이썬 버전 세팅 ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
           
-      - name: 파이썬 버전 출력
+      - name: Display Python version
         run: python -c "import sys; print(sys.version)"
         
-      - name: 아키팩트 생성 중..
+      - name: Create version artifact
         run: |
-          echo ${{ matrix.python-version }} > ${ matrix.python-version }_version.txt
+          echo "Python 3.8: $(python3.8 --version)" >> version.txt
+          echo "Python 3.9: $(python3.9 --version)" >> version.txt
+          echo "Python 3.10: $(python3.10 --version)" >> version.txt
+          echo "::set-output name=version::$(cat version.txt)"
         id: version
         
-      - name: 아키팩트 업로드
+      - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: 파이썬 버전
-          path: ${ matrix.python-version }_version.txt
+          name: python-versions
+          path: version.txt
