--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -21,8 +21,7 @@ jobs:
         run: python -c "import sys; print(\"파이썬 버전:\" +sys.version)"
         
       - name: Create version artifact
-        run: |
-          echo: python -c "import sys; print(\"파이썬 버전:\" +sys.version)" > version.txt
+        run: python -c "import sys; print(\"파이썬 버전:\" +sys.version)" > version.txt
         id: version
         
       - name: Upload artifact
