--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: python-versions
-          path: version.txt
+          path: version_ ${{ matrix.python-version }}_.txt
