--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -21,11 +21,11 @@ jobs:
         run: python -c "import sys; print(\"파이썬 버전:\" +sys.version)"
         
       - name: Create version artifact
-        run: python -c "import sys; print(\"파이썬 버전:\" +sys.version)" > version_ ${{ matrix.python-version }}_.txt
+        run: python -c "import sys; print(\"파이썬 버전:\" +sys.version)" >> version.txt
         id: version
         
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: python-versions
-          path: version_ ${{ matrix.python-version }}_.txt
+          path: version.txt
